# Project

./: .gitignore  main.py  pyproject.toml
Financial_Agent_AI/: .gitignore  README.md  __init__.py  core_main.py  main.py  pyproject.toml  requirements.txt
Financial_Agent_AI/action/: __init__.py  executor.py
Financial_Agent_AI/agent/: __init__.py  agent_loop.py  contextManager.py
Financial_Agent_AI/config/: __init__.py  environment.py  llm_config.py  mcp_server_config.yaml  profiles.yaml  schemas.py
Financial_Agent_AI/decision/: __init__.py  decision.py
Financial_Agent_AI/mcp_servers/: __init__.py  mcp_finance_tools.py  multiMCP.py
Financial_Agent_AI/perception/: __init__.py  perception.py
Financial_Agent_AI/prompts/: decision_prompt.txt  perception_prompt.txt  retrieval_prompt.txt  summarizer_prompt.txt
Financial_Agent_AI/retrieval/: __init__.py  financial_rag_pipeline.py  rag_pipeline.py
Financial_Agent_AI/summarization/: __init__.py  summarizer.py
Financial_Agent_AI/tests/: test_annual_report_e2e.py  test_results.json
Financial_Agent_AI/tools/: finance_tools.py
Financial_Agent_AI/utils/: json_parser.py
